--- a/esmvaltool/recipes/examples/recipe_preprocessor_derive_test.yml
+++ b/esmvaltool/recipes/examples/recipe_preprocessor_derive_test.yml
@@ -55,7 +55,7 @@ diagnostics:
         force_derivation: false
         additional_datasets:
           - {dataset: HadGEM2-A}
-      nbp_grid:
+      nbp_grid: &nbp_grid
         preprocessor: regrid
         project: CMIP5
         mip: Lmon
@@ -67,6 +67,9 @@ diagnostics:
           - {dataset: CanESM2,      ensemble: r1i1p1}
           - {dataset: MPI-ESM-LR,   ensemble: r1i1p1}
           - {dataset: IPSL-CM5A-LR, ensemble: r1i1p1}
+      fgco2_grid:
+        <<: *nbp_grid
+        mip: Omon
     scripts: null
 
   diag2:
