--- a/esmvaltool/recipes/recipe_C3S_511_SPQB_albedo.yml
+++ b/esmvaltool/recipes/recipe_C3S_511_SPQB_albedo.yml
@@ -15,7 +15,7 @@ documentation:
 
 
 datasets:
-  - {dataset: CDS-SATELLITE-ALBEDO, type: sat, project: OBS, mip: Lmon, version: L3, tier: 3, start_year: 1999,  end_year: 2000}
+  - {dataset: CDS-SATELLITE-ALBEDO, type: sat, project: OBS, mip: Lmon, version: L3, tier: 3, start_year: 1999,  end_year: 2013} #2013
 preprocessors:
   noop: {}
 
@@ -28,49 +28,49 @@ diagnostics:
         field: T2Ms
         derive: False
     scripts:
-#      diag_O_info:
-#        script: qualassess/albedo_C3S_511_SPQB.py
-#        requests: [info]#, GCOS]
-#      diag_O_avail:
-#        script: qualassess/albedo_C3S_511_SPQB.py
-#        requests: [availability]
-#      diag_O_hist:
-#        script: qualassess/albedo_C3S_511_SPQB.py
-#        requests: [histogram]
-#      diag_MV_ts:
-#        script: qualassess/albedo_C3S_511_SPQB.py
-#        requests: [time_series]
-#      diag_MV_mean:
-#        script: qualassess/albedo_C3S_511_SPQB.py
-#        requests: [mean]
-#      diag_MV_std_dev:
-#        script: qualassess/albedo_C3S_511_SPQB.py
-#        requests: [std_dev]
-#      diag_MV_perc:
-#        script: qualassess/albedo_C3S_511_SPQB.py
-#        requests: [percentiles]
-#      diag_MV_clim:
-#        script: qualassess/albedo_C3S_511_SPQB.py
-#        requests: [climatology]
-#      diag_MV_anom:
-#        script: qualassess/albedo_C3S_511_SPQB.py
-#        requests: [anomalies]
-#      diag_T_trend:
-#        script: qualassess/albedo_C3S_511_SPQB.py
-#        requests: [lintrend]
+      diag_O_info:
+        script: qualassess/albedo_C3S_511_SPQB.py
+        requests: [info]#, GCOS]
+      diag_O_avail:
+        script: qualassess/albedo_C3S_511_SPQB.py
+        requests: [availability]
+      diag_O_hist:
+        script: qualassess/albedo_C3S_511_SPQB.py
+        requests: [histogram]
+      diag_MV_ts:
+        script: qualassess/albedo_C3S_511_SPQB.py
+        requests: [time_series]
+      diag_MV_mean:
+        script: qualassess/albedo_C3S_511_SPQB.py
+        requests: [mean]
+      diag_MV_std_dev:
+        script: qualassess/albedo_C3S_511_SPQB.py
+        requests: [std_dev]
+      diag_MV_perc:
+        script: qualassess/albedo_C3S_511_SPQB.py
+        requests: [percentiles]
+      diag_MV_clim:
+        script: qualassess/albedo_C3S_511_SPQB.py
+        requests: [climatology]
+      diag_MV_anom:
+        script: qualassess/albedo_C3S_511_SPQB.py
+        requests: [anomalies]
+      diag_T_trend:
+        script: qualassess/albedo_C3S_511_SPQB.py
+        requests: [lintrend]
       diag_custom:
         script: qualassess/albedo_C3S_511_SPQB.py
         requests: [custom]
-#      diag_tables:
-#        script: qualassess/albedo_C3S_511_SPQB.py
-#        requests: [SMM, ESM]
+      diag_tables:
+        script: qualassess/albedo_C3S_511_SPQB.py
+        requests: [SMM, ESM]
       report:
         script: qualassess/albedo_C3S_511_SPQB.py
         ancestors: ["bdalb", '*/diag_*']
         requests: [report]
-        order: [diag_custom]
-#        order: [diag_O_info, diag_tables, diag_O_hist, diag_O_avail,
-#                diag_MV_ts, diag_MV_mean, diag_MV_std_dev, diag_MV_perc, 
-#                diag_MV_clim, diag_MV_anom, diag_T_trend, diag_custom]
+#        order: [diag_custom]
+        order: [diag_O_info, diag_tables, diag_O_hist, diag_O_avail,
+                diag_MV_ts, diag_MV_mean, diag_MV_std_dev, diag_MV_perc, 
+                diag_MV_clim, diag_MV_anom, diag_T_trend, diag_custom]
         show_latex: False #options are: True/False/no_latex
 
