Added BCC* fixes into the CMIP6 folder.

--- a/esmvaltool/recipes/recipe_ocean_temperature_cmip6.yml
+++ b/esmvaltool/recipes/recipe_ocean_temperature_cmip6.yml
@@ -28,12 +28,15 @@ documentation:
 
 datasets:
      # CMIP6
+     - {dataset: BCC-CSM2-MR,      project: CMIP6,    exp: historical, ensemble: r1i1p1f1, grid: gn, start_year: 2000,  end_year: 2014}
+     - {dataset: BCC-ESM1,         project: CMIP6,    exp: historical, ensemble: r1i1p1f1, grid: gn, start_year: 2000,  end_year: 2014}
      - {dataset: CESM2,            project: CMIP6,    exp: historical, ensemble: r1i1p1f1, grid: gn, start_year: 2000,  end_year: 2014}
      - {dataset: CNRM-CM6-1,       project: CMIP6,    exp: historical, ensemble: r1i1p1f2, grid: gn, start_year: 2000,  end_year: 2014}
      - {dataset: GISS-E2-1-G,      project: CMIP6,    exp: historical, ensemble: r1i1p1f1, grid: gn, start_year: 2000,  end_year: 2014}
-     - {dataset: UKESM1-0-LL,      project: CMIP6,    exp: historical, ensemble: r1i1p1f2, grid: gn, start_year: 2000,  end_year: 2014}
-     - {dataset: MIROC6,           project: CMIP6,    exp: historical, ensemble: r1i1p1f1, grid: gn, start_year: 2000,  end_year: 2014}
      - {dataset: IPSL-CM6A-LR,     project: CMIP6,    exp: historical, ensemble: r1i1p1f1, grid: gn, start_year: 2000,  end_year: 2014}
+     - {dataset: MIROC6,           project: CMIP6,    exp: historical, ensemble: r1i1p1f1, grid: gn, start_year: 2000,  end_year: 2014}
+     - {dataset: UKESM1-0-LL,      project: CMIP6,    exp: historical, ensemble: r1i1p1f2, grid: gn, start_year: 2000,  end_year: 2014}
+
 
 preprocessors:
   # --------------------------------------------------
