--- a/esmvaltool/recipes/recipe_perfmetrics_CMIP5.yml
+++ b/esmvaltool/recipes/recipe_perfmetrics_CMIP5.yml
@@ -256,7 +256,7 @@ diagnostics:
     scripts:
       cycle: &cycle_settings
         script: perfmetrics/main.ncl
-        # Plot type ('cycle', 'zonal', 'latlon', 'cycle_latlon')
+        # Plot type ('cycle', 'zonal', 'latlon', 'cycle_latlon', 'cycle_zonal')
         plot_type: cycle
         # Time average ('opt' argument of time_operations.ncl)
         time_avg: monthlyclim
@@ -270,10 +270,8 @@ diagnostics:
         styleset: CMIP5
       grading: &grading_settings
         <<: *cycle_settings
-        # Plot type ('cycle', 'zonal', 'latlon', 'cycle_latlon')
+        # Plot type ('cycle', 'zonal', 'latlon', 'cycle_latlon', 'cycle_zonal')
         plot_type: cycle_latlon
-        # Draw plots
-        draw_plots: false
         # Calculate grading
         calc_grading: true
         # Metric ('RMSD', 'BIAS', taylor')
@@ -586,7 +584,7 @@ diagnostics:
     scripts:
       zonal: &zonal_settings
         script: perfmetrics/main.ncl
-        # Plot type ('cycle', 'zonal', 'latlon', 'cycle_latlon')
+        # Plot type ('cycle', 'zonal', 'latlon', 'cycle_latlon', 'cycle_zonal')
         plot_type: zonal
         # Time average ('opt' argument of time_operations.ncl)
         time_avg: annualclim
@@ -1139,7 +1137,7 @@ diagnostics:
     scripts:
       latlon: &latlon_settings
         script: perfmetrics/main.ncl
-        # Plot type ('cycle', 'zonal', 'latlon', 'cycle_latlon')
+        # Plot type ('cycle', 'zonal', 'latlon', 'cycle_latlon', 'cycle_zonal')
         plot_type: latlon
         # Time average ('opt' argument of time_operations.ncl)
         time_avg: annualclim
